ProTrackDev/force-app/main/default/objects/TR_Test_Script__c/TR_Test_Script__c.object-meta.xml
<CustomObject>
    <label>Test Script</label>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Test Script Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>