ProTrackDev/force-app/main/default/objects/TR_Test_Script__c/fields/TR_Introduction__c.field-meta.xml
<CustomField>
    <fullName>TR_Introduction__c</fullName>
    <label>Introduction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>