ProTrackDev/force-app/main/default/objects/TR_Test_Script__c/fields/TR_Module__c.field-meta.xml
<CustomField>
    <fullName>TR_Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Delegate Admin</fullName>
            </value>
            <value>
                <fullName>Territory</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Sales Target</fullName>
            </value>
            <value>
                <fullName>Contract Renewal</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>MIF</fullName>
            </value>
            <value>
                <fullName>Mass Upload</fullName>
            </value>
            <value>
                <fullName>Security Settings</fullName>
            </value>
            <value>
                <fullName>Salesforce1</fullName>
            </value>
            <value>
                <fullName>Reports and Dashboards</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>SF1 Account</fullName>
            </value>
            <value>
                <fullName>SF1 Contact</fullName>
            </value>
            <value>
                <fullName>SF1 Lead</fullName>
            </value>
            <value>
                <fullName>SF1 Opportunity</fullName>
            </value>
            <value>
                <fullName>SF1 Activity</fullName>
            </value>
            <value>
                <fullName>SF1 Campaign</fullName>
            </value>
            <value>
                <fullName>SF1 Territory</fullName>
            </value>
            <value>
                <fullName>SF1 Product</fullName>
            </value>
            <value>
                <fullName>SF1 Sales Target</fullName>
            </value>
            <value>
                <fullName>SF1 MIF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>