ProTrackDev/force-app/main/default/objects/TR_Test_Script__c/fields/TR_Pre_requisite__c.field-meta.xml
<CustomField>
    <fullName>TR_Pre_requisite__c</fullName>
    <label>Pre-requisite</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>