ProTrackDev/force-app/main/default/objects/TR_Test_Script__c/fields/TR_Test_Phase__c.field-meta.xml
<CustomField>
    <fullName>TR_Test_Phase__c</fullName>
    <label>Test Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TR_Test_Phase</valueSetName>
    </valueSet>
</CustomField>