ProTrackDev/force-app/main/default/objects/TR_Test_Script__c/fields/TR_Test_Script_Status__c.field-meta.xml
<CustomField>
    <fullName>TR_Test_Script_Status__c</fullName>
    <label>Test Script Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>