ProTrackDev/force-app/main/default/objects/TR_Test_Script__c/fields/TR_Test_Title__c.field-meta.xml
<CustomField>
    <fullName>TR_Test_Title__c</fullName>
    <label>Test Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>