ProTrackDev/force-app/main/default/objects/TR_Test_Script__c/fields/TR_Tester_Role__c.field-meta.xml
<CustomField>
    <fullName>TR_Tester_Role__c</fullName>
    <label>Tester Role</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>