ProTrackDev/force-app/main/default/objects/TR_Test_Script__c/fields/TR_User_Story__c.field-meta.xml
<CustomField>
    <fullName>TR_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>TR_User_Story__c</referenceTo>
    <relationshipLabel>Test Scripts</relationshipLabel>
    <relationshipName>Test_Scripts</relationshipName>
    <type>Lookup</type>
</CustomField>