ProTrackDev/force-app/main/default/objects/TR_Test_Script__c/fields/TR_User_Story_Description__c.field-meta.xml
<CustomField>
    <fullName>TR_User_Story_Description__c</fullName>
    <formula>TR_User_Story__r.TR_Story_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Story Description</label>
    <type>Text</type>
</CustomField>