ProTrackDev/force-app/main/default/objects/TR_Test_Script__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TR_Module__c</columns>
    <columns>TR_Test_Title__c</columns>
    <columns>TR_Introduction__c</columns>
    <columns>TR_Expected_Result__c</columns>
    <columns>TR_User_Story__c</columns>
    <columns>TR_Test_Phase__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>